force-app/main/default/objects/Registration__c/fields/Registration_ID__c.field-meta.xml
<CustomField>
    <fullName>Registration_ID__c</fullName>
    <displayFormat>RID-{0000}</displayFormat>
    <label>Registration ID</label>
    <type>AutoNumber</type>
</CustomField>