force-app/main/default/objects/Registration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Event__c</columns>
    <columns>Registration_Date__c</columns>
    <columns>Registration_ID__c</columns>
    <columns>Status__c</columns>
    <columns>Attendee__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>